# boids

./: Cargo.toml  README.md
src/: boids_plugin.rs  main.rs
