[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0" }
bevy-inspector-egui = "0.19"
rand = "0.8.5"

#[workspace]
#resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for game's code:
[profile.dev.package."*"]
opt-level = 3