[package]
name = "boids_rs_bevy"
version = "0.1.0"
edition = "2021"
description = "Rust boids simulation using Reynolds model running with Bevy engine"
license = "GPL-3.0-or-later"
keywords = ["boids", "simulation", "bevy"]
categories = ["simulation", "game-development"]
readme = "README.md"
repository = "https://github.com/danieldidiobalsamo/boids"

[dependencies]
bevy = { version = "0.11.0" }
bevy-inspector-egui = "0.19"
rand = "0.8.5"

#[workspace]
#resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for game's code:
[profile.dev.package."*"]
opt-level = 3